# immunopipe

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  Dockerfile.base  Dockerfile.full  Dockerfile.np1  Dockerfile.rpkgs  Makefile  README.md  board.toml  entrypoint.sh  environment.yml  example.config.toml  immunopipe.config.example.toml  index.html  latest  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini  versions.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  deploy.yml  docs-dev.yml  docs.yml  test.yml
1.3.4-post1/: index.html
1.3.4-post1/CHANGELOG/: index.html
1.3.4-post1/configurations/: index.html
1.3.4-post1/faq/: index.html
1.3.4-post1/getting-started/: index.html
1.3.4-post1/search/: search_index.json
1.3.4-post2/: index.html
1.3.4-post2/CHANGELOG/: index.html
1.3.4-post2/css/: theme_extra.css
1.3.4-post2/installation/: index.html
1.3.4-post2/running/: index.html
1.3.4-post3/: index.html
1.3.4-post3/js/: theme_extra.js
1.3.4-post4/: index.html
1.3.4-post4/search/: search_index.json
1.3.5/: index.html
1.3.5/faq/: index.html
1.3.5/introduction/: index.html
1.3.6/: index.html
1.3.6/js/: version-select.js
1.3.6/search/: search_index.json
1.3.7/: index.html
1.3.7/CHANGELOG/: index.html
1.3.7/running/: index.html
1.3.7/search/: search_index.json
1.3.8/: index.html
1.3.8/CHANGELOG/: index.html
1.3.8/assets/: script.js
1.3.8/search/: search_index.json
1.3.9/: index.html
1.3.9/CHANGELOG/: index.html
1.3.9/faq/: index.html
1.3.9/running/: index.html
1.4.0/: index.html
1.4.1/: index.html
1.4.2/: 404.html  index.html
1.4.3/: index.html  search.html
1.4.4/: index.html
2.0.0/: index.html  search.html
2.0.0pre1/: 404.html  index.html
2.0.0rc2/: index.html
2.0.0rc3/: 404.html  index.html
2.0.0rc4/: index.html
2.0.0rc5/: 404.html  index.html
2.0.0rc6/: index.html
2.0.1/: index.html
2.0.2/: index.html
2.0.3/: 404.html  index.html
2.1.0/: index.html
2.1.1/: 404.html  index.html
2.1.2/: index.html
2.1.3/: index.html
2.2.0/: index.html
2.2.1/: index.html
2.2.2/: index.html
2.3.0/: index.html
2.3.1/: index.html
2.3.2/: index.html
2.3.3/: index.html
2.4.0/: index.html
2.4.1/: index.html  search.html
2.4.2/: index.html  requirements.txt
2.4.3/: index.html
2.4.4/: index.html
2.5.0/: index.html
2.5.1/: index.html
2.5.2/: index.html
2.5.3/: index.html
CHANGELOG/: index.html
Cell-distribution/: index.html
GSEA/: index.html
assets/: style.css
basic-tcr/: index.html
clone-residency/: index.html
cluster-all-cells/: index.html
cluster-t-cells/: index.html
configurations/: index.html
dev/: 404.html  index.html  search.html
docker/: cleanup.list  cleanup.py  dockerhub-base-description.md  dockerhub-description.md  dockerhub-rpkgs-description.md  entry.sh  environment.yml  environment_base.yml  environment_full.yml  environment_np1.yml  environment_rpkgs.yml  poetry.pth  requirements.np1.txt  requirements_np1.txt
docs/: CHANGELOG.md  Cell-distribution.md  GSEA.md  agent-skills.md  basic-tcr.md  clone-residency.md  cluster-all-cells.md  cluster-t-cells.md  configurations.md  dimplots.md  faq.md  gallery.md  gene-expr-investigation-for-each-cluster.md  getting-started.md  input.md  installation.md  introduction.md  markers-finder.md  mcp-server.md  metabolic.md  preparing-input.md  radar.md  requirements.txt  running.md  style.css  t-cell-clustering-stats.md  tcr-clustering.md  vj-usage.md
faq/: index.html
gallery/: index.html
immunopipe/: __init__.py  __main__.py  args.py  cli_help.py  commands.py  defaults.py  gbatch.py  inhouse.py  mcp.py  pipeline.py  processes.py  router.py  utils.py  validate_config.py  version.py
input/: index.html
markers-finder/: index.html
metabolic/: index.html
preparing-input/: index.html
radar/: index.html
search/: search_index.json
skills/: README.md
t-cell-clustering-stats/: index.html
tcr-clustering/: index.html
tests/: conftest.py  test_doc_extractor.py  test_immunarchloading.py  test_mcp_options.py  test_mcp_toml_generator.py  test_mcp_tools.py  test_processes.py  test_route_sampleinfo_only.py  test_routes.py  test_sampleinfo.py  test_seuratclustering.py  test_seuratpreparing.py  test_validate_config.py
vj-usage/: index.html
(+617 files in other folders)
